--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,8 +7,16 @@
 {% block main %}
 <div class="p-5 mb-4 bg-light rounded-3 border">
   <div class="container-fluid py-5">
-    <h1 class="display-5 fw-bold">Hello, world!</h1>
-    <p>This is a simple starter template for a Flask Application</p>
+    <h1 class="display-5 fw-bold">Welcome to Real Estate!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+       incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+       exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+       anim id est laborum.</p>
+       <div>
+        <a href="{{ url_for('properties') }}" class="email-realtor btn btn-info font-weight-bold">Browse Properties</a>
+    </div>
   </div>
 </div>
 {% endblock %}
