--- a/app/templates/view_property.html
+++ b/app/templates/view_property.html
@@ -26,7 +26,8 @@
 
 
         <div class="rooms">
-            <p class=""> <span class="room"> {{_property.rooms }} Bedrooms</span> <span class="bath">{{_property.bathrooms}} Bathrooms</span></p>
+            <p class=""> <span class="room"> {{_property.rooms }} Bedrooms</span> 
+                <span class="bath"><img src='../static/icons/shower.svg' alt='shower icon' id='shower-icon' class='mr-2 icon' />{{_property.bathrooms}} Bathrooms</span></p>
         </div>
 
         <div>
