--- a/app/templates/view_property.html
+++ b/app/templates/view_property.html
@@ -13,21 +13,21 @@
         </section>
 
         <div class="price-type pb-3">
-            <span class="badge badge-pill bg-warning px-3 py-2 text-light md-bold"
+            <span class="badge badge-pill bg-warning px-3 py-2 text-light"
             data-toggle="tooltip" data-placement="top" title="Price">${{ _property.price }}</span>
             <span class="badge badge-pill bg-info px-3 py-2 text-light  md-bold"
             data-toggle="tooltip" data-placement="top" title="Property Type">{{ _property.property_type}}</span>
         </div>
 
 
-        <section class="description pb-3 md-bold pl-1">
+        <section class="description pb-3 pl-1">
             {{_property.description}}
         </section>
 
 
         <div class="rooms">
-            <p class=""> <span class="room"> {{_property.rooms }} Bedrooms</span> 
-                <span class="bath"><img src='../static/icons/bath.svg' alt='shower icon' id='shower-icon' class='mr-2 icon' />{{_property.bathrooms}} Bathrooms</span></p>
+            <p class=""> <span class="room"><img src='../static/icon/room.webp' alt='shower icon' id='shower-icon' class='icon' /> {{_property.rooms }} Bedrooms</span> 
+                <span class="bath"><img src='../static/icon/bath.jpg' alt='shower icon' id='shower-icon' class='icon' />{{_property.bathrooms}} Bathrooms</span></p>
         </div>
 
         <div>
