--- a/app/templates/properties.html
+++ b/app/templates/properties.html
@@ -13,7 +13,7 @@
                     <div class="card-body">
                         <h5 class="card-title px-1 ml-1">{{ _property.title }}<span class="house">{{_property.property_type}}</span></h5> 
                             <img src='../static/icon/location.jpg' alt='location icon' class='location' />{{ _property.location }}</p>
-                        <div class=" badge badge-pill bg-warning px-4 py-2 text-light md-bold ml-1"><span class="'dol-sign">$</span>{{ _property.price }}</div>
+                        <div class=" badge badge-pill bg-warning px-4 py-2 text-light ml-1"><span class="'dol-sign">$</span>{{ _property.price }}</div>
                     </div>
 
                     <div class="card-footer prop">
